FreeST/test/Programs/InvalidTests/Linearity/linRemovedFromCtx/linRemovedFromCtx.fst
a : Int 1-> Int 
a n = n + (b 0)

b : Int 1-> Int 
b = True 

main : Int 
main = a 4
